# sorting

./: CMakeLists.txt  README.md
.cache/clangd/index/: context.c.F7A1BEE2764380C7.idx  egl_context.c.698484D27745F417.idx  glad.c.1FF47BC3CF5B98A0.idx  glad.h.14CE2C476FEC27D2.idx  glfw3.h.3EF75DDF0FFD63C3.idx  glfw3native.h.4AAA9B721DC62D32.idx  glx_context.c.298444F5553A4DB1.idx  init.c.C59C828800A9A249.idx  input.c.D39550957994A416.idx  internal.h.43167BA3D0E7CFFE.idx  khrplatform.h.403D1A1DA9153B01.idx  line.cpp.40EEB9B6D114111C.idx  line.hpp.6B8AEF4AA18E26CE.idx  linux_joystick.c.AB2C2F3B5FEEDAC9.idx  linux_joystick.h.5575CBBA6D4B8669.idx  main.cpp.86444BD239A82A5E.idx  mappings.h.F9AC54800A3B6D88.idx  monitor.c.FFBEBE8BBC63C893.idx  null_init.c.FF2FA2F96F98C883.idx  null_joystick.c.3EFCCEEE503C52B5.idx  null_joystick.h.713066EAB539FA88.idx  null_monitor.c.8DD8ABE1EAAD2673.idx  null_platform.h.01905C67D455594F.idx  null_window.c.647452E21B83426C.idx  osmesa_context.c.C6F5513638E11C06.idx  platform.c.B3EECBC98700DF32.idx  platform.h.862FCEED4E63FC51.idx  polygon.cpp.954EF0638FE0D0D9.idx  polygon.hpp.936370E33662970E.idx  posix_module.c.B76C89E3119EAE6F.idx  posix_poll.c.C40A536C798BC0D3.idx  posix_poll.h.BEE6BA89941F7B60.idx  posix_thread.c.9CAD19EF9674965E.idx  posix_thread.h.171C38521BEE32B7.idx  posix_time.c.18277A5A5DB658D4.idx  posix_time.h.CAB459D696C1B962.idx  (+20 more)
include/: line.hpp  polygon.hpp  renderer.hpp  shader.hpp  sort.hpp  window.hpp
shaders/: vertex.glsl
src/: line.cpp  main.cpp  polygon.cpp  renderer.cpp  shader.cpp  sort.cpp  window.cpp
